<resources>
    <string name="app_name">Login Sample</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint" translatable="false">Already have an account? Sign In</string>
    <string name="login_signup_hint" translatable="false">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="login_background" translatable="false">login background</string>
    <string name="welcome">Welcome</string>
    <string name="don_t_have_an_account_yet_register_here">Don\'t have an account yet? Register here!</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register_password_hint">Password</string>
    <string name="naziv_firme" translatable="false">nayiv firme</string>
    <string name="print">Print</string>
    <string name="bold" translatable="false">Bold</string>
    <string name="font_size">Font size</string>
    <string name="text">Text</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="change_font_size" translatable="false">Change font size</string>
    <string name="delete">DELETE</string>
    <string name="confirm">Confirm</string>
    <string name="delete_sentence">Are you sure you want to delete this row?</string>
    <string name="plus" translatable="false">plus</string>
    <string name="line">Line</string>
    <string name="register_layout">Register</string>
    <string name="save">SAVE</string>
    <string name="toast_save">Your settings have been saved!</string>
    <string name="please_try_again">"Please try again"</string>
    <string name="wrong_username">"Wrong username or password"</string>

</resources>
